# mictlanx-client

./: .env.dev  .env.test  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  build.sh  deploy.sh  deploy_peer.sh  deploy_router.sh  mictlanx-docs.yml  mictlanx-peer.yml  mictlanx-router.yml  mkdocs.yml  publish.sh  pyproject.toml  requirements.txt  run_docs.sh  run_tests.sh  setup.py  zensical.toml
.github/workflows/: docs.yml  publish-to-test-pipy.yml  run_test.yml
analysis/: workload.ipynb
benches/: .env  index.py  index_ndarray.py  no_rep.py  workload_gets.py  workload_puts.py
benches/CT1_NOREP/: bench_ct1_norep.py
benches/CT1_NOREP/.profiles/: ct1_10mb_reads.html  ct1_1mb_reads.html  ct1_norep_10mb.html  ct1_norep_1mb.html  producer_consumer.html
benches/traces/: 1mb.csv  trace.csv
docs/: Dockerfile  README.md  api-reference.md  api.md  architecture.md  getting-started.md  index.html  index.md  introduction.md  mkdocs.yml  prerequisites.md  run_docs.sh  use-cases.md  use_cases.md
docs/docs/: index.md
examples/: 01_put_metadata.py  01_router_put_metadata.py  02_put_data.py  example.py  services.py  v2.py
examples/client/: 01_put.py  02_get.py  03_put_dataframe.py
examples/data/frames/: frame_000  frame_001  frame_002  frame_003  frame_004  frame_006  frame_007  frame_008  (+125 more)
examples/peer/: 01_put_metadata.py  02_put_data.py  03_get.py  04_put_frames.py  05_get_frames.py
examples/router/: 01_put_metadata.py  02_put_data.py
examples/v2/: example.py  services.py
examples/v3/: .env  .env-local  01_put.py  02_get.py  03_del.py  03_ndarray.py  04_ndarray.py  04_xolo.py  04_xolo_token_auth.py  05_xolo_aes.py  06_xolo_key_exchange.py  07_xolo_token_auth.py  08_summoner_container.py  09_del_container.py  10_chunks.py  11_chunks_bytes.py  basic.py
examples/v4/: .env  01_put.py  02_get.py  03_put_ndarray.py  04_get_ndarray.py  05_put_chunks.py  06_put_ndarrray_chunks.py  07_get_chunks.py  08_get_ndarray_chunks.py  09_get_chunks_params.py  10_summoner_deploy_container.py  11_put_chunked.py  12_summoner_delete_container.py  13_get_bytes.py  14_delete_bucket.py  15_get_with_retry.py  16_put_encrypt.py  17_get_encrypt.py  18_update_metadata.py
examples/v4-async/: .env  01_put.py  02_get.py  03_put_get.py  pqc.py
mictlanx/: __init__.py  mictlanx.py
mictlanx/apac/: abstract.py  contextual_lang.py  parser.py
mictlanx/async/: client.py
mictlanx/asyncx/: __init__.py  lb.py  utils.py
mictlanx/caching/: __init__.py  lru.py
mictlanx/errors/: __init__.py
mictlanx/interfaces/: __init__.py  index.py  payloads.py  responses.py  service.py
mictlanx/ipc/: client.py
mictlanx/logger/: __init__.py  log.py
mictlanx/retry/: __init__.py
mictlanx/services/: __init__.py  peer.py  router.py
mictlanx/summoner/: summoner.py
mictlanx/types/: __init__.py
mictlanx/utils/: __init__.py  compression.py  index.py  segmentation.py  uri.py
mictlanx/v3/: client.py
mictlanx/v4/: client.py
scripts/: gen_ref_pages.py
src/: mictlanx.py
src/logger/: Logger.py
src/mictlanx/: __init__.py  client.py
test/: client.py  memory.py  test.py
tests/: .env  conftest.py  mictlanx_test.py  peer_test.py  proxy.py  router_test.py  test_cache.py  test_chunks.py  test_compression.py  test_delete.py  test_delete_async.py  test_errors.py  test_get.py  test_get_async.py  test_get_bucket.py  test_get_metadata.py  test_peer.py  test_peer_async.py  test_put.py  test_put_async.py  test_put_bulk.py  test_raf.py  test_router.py  test_router_lb.py  test_segmentation.py  test_summoner.py  test_uri.py  test_utils.py  xolo.py
(+104 files in other folders)
